# mortgage-tracker

./: .env.example  .gitignore  AUDIT_AND_MVP_PLAN.md  DATA_QUALITY_UPDATE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEVELOPMENT.md  EMAIL_SETUP.md  IMPLEMENTATION_SUMMARY.md  ISSUES_FIXED.md  LICENSE  MVP_COMPLETE.md  MVP_IMPLEMENTATION_SUMMARY.md  MVP_QUALITY_CHECK.md  PARSER_RELIABILITY_SYSTEM.md  PROJECT_SUMMARY.md  RATE_DATA_ALTERNATIVES.md  README.md  REAL_VS_SAMPLE_DATA.md  STRATEGY_LEAD_GENERATION.md  WEBSITE_UPDATE_rates_page.tsx  mortgage-tracker_lenders_v0.1.md  pyproject.toml  sources.yaml  sources_backup.yaml  sources_full.yaml  sources_generated.yaml
.github/workflows/: daily.yml
scripts/: add_sample_data.py  apply_migration_002.py  apply_rpc_fix.py  clear_sample_data.py  md_to_sources.py  mvp_smoke_test.sh  run_verify.sh  test_parsers.py  test_rpc.py  verify_deployment.sh  verify_rpc.py
src/mortgage_tracker/: config.py  emailer.py  fetch.py  main.py  main_old.py  normalize.py  rank.py  supabase_client.py  validate.py
src/mortgage_tracker/parsers/: __init__.py  alliant.py  america_first.py  bankrate_marketplace.py  base.py  dcu.py  example_html_table.py  example_json_endpoint.py  first_tech.py  generic_table.py  metro_cu.py  navy_federal.py  ncsecu.py  nerdwallet_marketplace.py  patelco.py  penfed.py  rockland_trust.py  sample_rates.py
supabase/migrations/: 001_rates.sql  002_flags.sql  003_fix_rpc.sql  004_fix_rpc_dedup.sql
types/: jsx.d.ts
